sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	

var n=getNombreValeurs()
var T:Array[Int](n)
var x=0
for(i<-1 to n-1)
{
	x=T(i)
	j=i
	while(j>0 && T(j-1)>x)
	{
		T(j)=T(j-1)
		j=j-1  
	}
	T(j)=x
}
}
